--- a/wp-content/themes/salsa-siempre/scss/_splash.scss
+++ b/wp-content/themes/salsa-siempre/scss/_splash.scss
@@ -35,7 +35,7 @@
 	font-size: 4em;
 	font-weight: 300;
 	margin: 0.4em 0 1em;
-	text-shadow: 4px 4px 6px rgba(137, 137, 137, 1);
+	text-shadow: 0.1em 0.1em 0.15em #898989;
 }
 
 .splash-dismiss {
