--- a/wp-content/themes/salsa-siempre/scss/_timetable.scss
+++ b/wp-content/themes/salsa-siempre/scss/_timetable.scss
@@ -94,7 +94,7 @@ $timetable-font-size: 1.2;
 	vertical-align: middle;
 	width: 2.2em;
 	height: 1.8em;
-	margin-right: 2px;
+	margin-right: 0.2em;
 }
 
 .timetable-filters {
